<resources>
    <string name="app_name">Brnnda</string>
    <string name="menu_home">Home</string>
    <string name="confirm_message">Thanks for your order. \n Place continue your order</string>
    <string name="failed_message">Sorry,Something went wrong.\n Please try again to continue your order</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_cart">Cart</string>
    <string name="bottom_account">Account</string>
    <string name="bottom_wish_list">Wishlist</string>
    <string name="image_url_product">https://chabikathi.essential-infotech.com/test/assets/images/products/</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to-</string>
    <string name="lbl_tep_email">jonndeo@gmail.com</string>
    <string name="lbl_did_not_receive">Did not receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_view_all">View all</string>
    <string name="hint_city">City</string>
    <string name="err_empty_cart">Empty cart</string>
    <string name="text_todo">Empty cart</string>
    <string name="lbl_shop_now">Shop now</string>
    <string name="hint_address">Address</string>
    <string name="invalid_product">Product Type not supported</string>
    <string name="lbl_my_order">My Order</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">WishList</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_newest_product">Newest Arrivals</string>
    <string name="lbl_rec_product">Suggested for You</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_selling">Best Selling Products</string>
    <string name="lbl_sale">Sale Products</string>
    <string name="lbl_sales">Sale</string>
    <string name="lbl_you_may_like">You may also like</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_4">4</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_price_detail">Price Details</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_offer">Available offer </string>
    <string name="lbl_shipping_charge">Shipping Charge </string>
    <string name="lbl_total_amount">Total Amount </string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_return_replace">Return &amp; Replace</string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Credit Card (Stripe)</string>
    <string name="lbl_net_banking">Card, NetBanking, Wallet and UPI\nPay by Razorpay</string>
    <string name="lbl_cash_on_delivery">Cash on delivery</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">My Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_remove_cart">Remove cart</string>
    <string name="lbl_logout_confirmation">Are you want to logout?</string>
    <string name="lbl_dialog_title">Confirmation</string>
    <string name="hint_email">Email</string>
    <string name="hint_company">Company</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="more">Read More</string>
    <string name="less">Read Less</string>
    <string name="order_summary">Order Summary</string>
    <string name="success">Successfully deleted</string>
    <string name="success_add">Successfully Added</string>
    <string name="send_to">Share with</string>
    <string name="lbl_save_profile">Save Profile</string>
    <string name="lbl_change_pwd">Change Password</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_new_password">New Password</string>
    <string name="lbl_change_now">Change Now</string>
    <string name="hint_enter_your_contact_number">Enter your contact number</string>
    <string name="hint_enter_your_email_id">Enter your email id</string>
    <string name="hint_description">Description</string>
    <string name="title_help">Help Center</string>
    <string name="title_setting">App Settings</string>
    <string name="title_faq">FAQ</string>
    <string name="lbl_account_deactivate">Account Deactivate</string>
    <string name="lbl_return_items">Return items</string>
    <string name="lbl_replace_items">Replace items</string>
    <string name="lbl_quick_pay">Quick Pay</string>
    <string name="lbl_call_request">Call Request</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_send_mail">Send mail</string>
    <string name="lbl_email_to_woobox">Email to woobox</string>
    <string name="lbl_from">From</string>
    <string name="lbl_description">Description</string>
    <string name="hint_description_here">Description here</string>
    <string name="lbl_successfully">Successfully Done</string>
    <string name="error_enter_valid_contact">Enter valid contact number</string>
    <string name="title_contact_us">Contact us</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_oder_placed_successfully">Order Placed Successfully</string>
    <string name="lbl_transaction_id">Transaction ID</string>
    <string name="lbl_transaction_date">Transaction Date</string>
    <string name="lbl_transaction_via">Order Via</string>
    <string name="lbl_fail_order">Payment failed. Try again</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Username">Username</string>
    <string name="lbl_remember">Remember</string>
    <string name="lbl_dont_have_account">Don\'t have Account?</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_sign_up_link">Sign Up</string>
    <string name="lbl_back">Back!</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_shop_for_happiness">Shop for happiness</string>
    <string name="lbl_already_have_account">Already have an account</string>
    <string name="lbl_sign_in_link">Sign in</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_total_amount_">Total Amount</string>
    <string name="lbl_shipping_fee">Shipping Fees</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_change_profile">Change your profile details &amp; password</string>
    <string name="lbl_check_your_order_status">Check your order status</string>
    <string name="lbl_manage_coupons_for_additional_discounts">Manage coupons for additional discounts</string>
    <string name="lbl_your_most_loved_styles">Your most loved styles</string>
    <string name="lbl_save_your_cards_for_faster_checkout">Save your cards for faster checkout</string>
    <string name="lbl_help_regarding_your_recent_purchases">Help regarding your recent purchases</string>
    <string name="lbl_profile_detail">Profile Detail</string>
    <string name="lbl_orders">Orders</string>
    <string name="lbl_personal">Personal</string>
    <string name="hint_contact">Contact Number</string>
    <string name="hint_expiry_date">Expiry </string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_holder_name">Name On Card</string>
    <string name="lbl_shipping_address">Shipping Address</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_payment_methods">Payment Methods</string>
    <string name="lbl_card_detail">Card Detail</string>
    <string name="lbl_cvv">CVV</string>
    <string name="lbl_delivered_estimated">Delivery on</string>
    <string name="lbl_out_stock">Out Stock</string>
    <string name="lbl_attribute">Attributes</string>
    <string name="lbl_checkout">Continue</string>
    <string name="lbl_available_coupon">Available Coupon</string>
    <string name="lbl_coupon_code">Coupon Code</string>
    <string name="lbl_please_wait">Please Wait</string>
    <string name="lbl_Available">Available in:</string>
    <string name="lbl_Billing">Billing</string>
    <string name="lbl_Shipping">Shipping</string>
    <string name="lbl_same">Same as Billing</string>
    <string name="lbl_total">Subtotal</string>
    <string name="lbl_other_item_in_cart">Item on this order</string>
    <string name="lbl_list_price">List Price</string>
    <string name="lbl_selling_price">Selling Price</string>
    <string name="lbl_extra_discount">Extra Discount</string>
    <string name="lbl_special_price">Special Price</string>
    <string name="lbl_download_invoice">Download Invoice</string>
    <string name="lbl_master_card">Master Card</string>
    <string name="lbl_dummy_bank">Dummy Bank</string>
    <string name="lbl_deals_of_the_day">Deals of the Day</string>
    <string name="lbl_place_order">PLACE ORDER</string>
    <string name="lbl_cart_details">Cart Details</string>
    <string name="lbl_pay">Pay</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_payment_through">Payment through</string>
    <string name="lbl_gram">Gram</string>
    <string name="lbl_product_include">Product Include:</string>
    <string name="lbl_additional_information">Additional information</string>
    <string name="lbl_upcoming_sale_on_this_item">Upcoming Sale on this Item</string>
    <string name="lbl_attributes_name">Attributes Name</string>
    <string name="lbl_response_within_24_hours">Response within 24 business hours</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_get">Get\u0020</string>
    <string name="lbl_get_flat">Get Flat\u0020</string>
    <string name="lbl_off">% Off</string>
    <string name="lbl_off1">Off</string>
    <string name="hint_full_name">Full name</string>
</resources>