<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_siding_24"
            android:title="@string/bottom_home" />
        <item
            android:id="@+id/bottom_wish"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/bottom_wish_list" />
        <item
            android:id="@+id/bottom_cart"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/bottom_cart" />

        <item
            android:id="@+id/bottom_account"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/bottom_account" />

    </group>
</menu>